# hesaff

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  Dockerfile  Dockerfile_oldd  FindOpenCV.cmake  LICENSE  LICENSE.SIFT  MANIFEST.in  Makefile  README  README.md  README.rst  __sysreq__.py  _pygrave.py  affine.cpp  affine.h  appveyor.yml  build_hesaff_mingw.bat  build_hesaff_unix.sh  build_hessaff_mingw.bat  build_wheels.sh  clean.sh  cleanup.sh  config.sh  crall_autobuild_hesaff.bat  crall_autobuild_hesaff.sh  ctypes_interface.py  docker_build.py  ellipse.py  exhaustive_test_ori_extract.py  helpers.cpp  hesaff  hesaff.cpp  hesaff.h  local_build.sh  local_multibuild.sh  (+40 more)
.github/workflows/: test_binaries.yml  tests.yml
CMake/: FindOpenCV.cmake
LICENSE/: LICENSE.txt
_graveyard/: Makefile  _pygrave.py  _pyhesaffexe.py
_graveyard/_page/: pyhesaff.tests.html  search.html
_graveyard/_page/_modules/pyhesaff/: _pyhesaff.html
_graveyard/_page/_modules/pyhesaff/tests/: test_cpp_rotation_invariance.html
_page/: index.html  objects.inv  py-modindex.html  searchindex.js
_page/_modules/pyhesaff/: ctypes_interface.html
_page/_modules/pyhesaff/tests/: pyhestest.html
_page/_sources/: pyhesaff.txt
dev/: build_opencv.sh  build_opencv_docker.py  ci_prepare_linux_for_build.sh  ci_prepare_macos_for_build.sh  ci_public_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  factory_utils.sh  gpg_owner_trust.enc  make_strict_req.sh  notes.txt  setup_secrets.sh  stage_multibuild.sh  travis_osx_brew_cache.sh  travis_public_gpg_key.pgp.enc  travis_secret_gpg_key.pgp.enc  windows_build_opencv.sh  windows_setup.sh
dev/_grave/: Dockerfile  _pyhesaffexe.py  config.sh
dev/_grave/_page/: genindex.html  pyhesaff.html
dev/_grave/_page/_sources/: index.txt  pyhesaff.tests.txt
dev/_graveyard/_page/_modules/: index.html
dev/_graveyard/_page/_modules/pyhesaff/tests/: test_pyhesaff_simple_iterative.html
dev/_graveyard/sandbox/: sifttest.py
docker/: Dockerfile  bashrc.sh  build_opencv_docker.py  utils.sh
docs/source/: conf.py  index.rst
factory/: build_opencv_docker.py  factory_utils.sh  old_stuff.sh  osx_utils.sh  stage_multibuild.sh  travis_osx_brew_cache.sh
multibuild/: common_utils.sh  osx_utils.sh  travis_linux_steps.sh
pyhesaff/: __init__.py  __main__.py  _grave.py  _pyhesaff.py  ctypes_interface.py
pyhesaff/tests/: pyhestest.py  test_adaptive_scale.py  test_cpp_rotation_invariance.py  test_draw_keypoint.py  test_ellipse.py  test_exhaustive_ori_extract.py  test_patch_orientation.py  test_pyhesaff.py  test_pyhesaff_simple_iterative.py  test_pyhesaff_simple_parallel.py
python_bindings/: __init__.py
requirements/: build.txt  graphics.txt  headless.txt  optional.txt  runtime.txt  tests.txt
sample/: all_souls_000026.jpg.hesaff.sift  all_souls_000055.jpg.hesaff.sift
sandbox/: sifttest.py
src/: _grave.c  affine.cpp  affine.h  helpers.cpp  helpers.h  hesaff.cpp  hesaff.h  orientation.cpp  orientation.h  pyramid.cpp  pyramid.h  siftdesc.cpp  siftdesc.h
tests/: __sysreq__.py  prototype_rotation_invariance.py  pyhestest.py  run_tests.sh  test_adaptive_scale.py  test_cpp_rotation_invariance.py  test_draw_keypoint.py  test_ellipse.py  test_exhaustive_ori_extract.py  test_import.py  test_patch_orientation.py  test_pyhesaff.py  test_pyhesaff_parallel_simple.py  test_pyhesaff_simple.py  test_pyhesaff_simple_iterative.py  test_pyhesaff_simple_parallel.py
util/: Batch SIFT Extractor.ipynb  Find out which file is not included.ipynb  SIFT RANSAC.ipynb
vtool/: __init__.py  ellipse.py  histogram.py  keypoint.py  linalg.py  patch.py
vtool/drawtool/: mpl_keypoint.py  mpl_sift.py
